# JoyReviews

./: .gitignore  AioVsRequests.py  Dockerconsole.txt  Dockerfile  LICENSE  README.md  SimpleParser  SimpleParser.py  async.py  docker-compose.yml  pyproject.toml  requirements_old.txt  test.py
Test/: AioVsRequests.py  CompanyClassLog.html  geolog.html
service/service/: settings.py
service/users/: admin.py  models.py
service/users/migrations/: 0001_initial.py  0002_alter_user_yam_company.py  0003_alter_user_yam_company.py  0004_alter_user_yam_company.py
service/yam_reviews/: admin.py  apps.py  models.py
service/yam_reviews/migrations/: 0001_initial.py
