[tool.poetry]
name = "joyreviews"
version = "0.1.0"
description = ""
authors = ["g4reev <g4reev.marat@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "3.6.3"
beautifulsoup4 = "^4.11.1"
cachetools = "4.2.2"
certifi = "2022.6.15"
cfscrape = "2.1.1"
charset-normalizer = "2.1.0"
idna = "3.3"
mccabe = "0.6.1"
pytz = "^2022.2.1"
pytz-deprecation-shim = "0.1.0.post0"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
six = "1.16.0"
soupsieve = "2.3.2.post1"
testfixtures = "6.18.5"
tornado = "6.1"
tzdata = "2022.4"
tzlocal = "4.2"
urllib3 = "1.26.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
